--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 config
 .gitignore
-venv
+.venv
+.mypy_cache
 .idea
 dist
 log/*
@@ -11,7 +12,7 @@ build
 *.json
 tmp/*
 tmp
-__pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 geetest/dataset
