--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,15 +43,16 @@ jobs:
         run: |
           pip install --upgrade setuptools wheel pyinstaller~=5.13.2 && pip install -r requirements.txt
 
+      - name: Build playwright
+        shell: bash
+        if: matrix.config.os.filename != 'linux_amd64' && matrix.config.os.filename != 'linux_arm64'
+        run: |
+          PLAYWRIGHT_BROWSERS_PATH=0 playwright install chromium
+
 
       - name: Build Pyinstaller
         shell: bash
         run: |
-          if [[ "$RUNNER_OS" != "Linux" ]]; then
-            PLAYWRIGHT_BROWSERS_PATH=0 playwright install chromium
-          else
-            echo "Skipping browser installation on Linux"
-            
           pyinstaller main.spec
       - name: Zip the Build-windows
         if: matrix.config.os.filename == 'windows_amd64'
