--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,7 @@ jobs:
     name: Upload to WebDAV
     runs-on: ubuntu-latest
     needs: build
-    if: env.WEBDAV_URL != ''
+    if: ${{ env.WEBDAV_URL != '' }}
 
     steps:
       - name: Checkout source
