--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "httpx[socks]>=0.28.1",
     "loguru~=0.7.2",
     "ntplib~=0.4.0",
-    "numpy>=1.26.4",
+    "numpy~=1.26.4",
     "playsound3~=3.2.2",
     "pydantic~=2.8.2",
     "qrcode>=7.4.2",
