--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "retry~=0.9.2",
     "setuptools~=65.5.1",
     "tinydb~=4.8.0",
-    "scipy~=1.15.2",
+    "Pillow~=10.3.0",
 ]
 [tool.mypy]
 disable_error_code = ["import-untyped"]
