--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,9 @@ loguru~=0.7.2
 retry~=0.9.2
 tinydb~=4.8.0
 ntplib~=0.4.0
-gradio-calendar~=0.0.4
 gradio_calendar~=0.0.6
 playsound3~=3.2.2
 pydantic~=2.8.2
 gradio_log~=0.0.4
 numpy~=1.26.4
+Pillow~=10.3.0
